--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,7 @@ nav .fa {
   display: none;
 }
 
+/* media */
 @media (max-width: 700px) {
   .text-box h1 {
     font-size: 20px;
@@ -150,6 +151,8 @@ p {
   padding: 10px;
 }
 
+/* couse */
+
 .row {
   margin-top: 5%;
   display: flex;
@@ -176,9 +179,62 @@ h3 {
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
 }
 
+/* media */
 @media (max-width: 700px) {
   .row {
     flex-direction: column;
     justify-content: center;
   }
+}
+
+/* campus */
+.campus {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.campus-col {
+  flex-basis: 32%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
+}
+
+.campus-col img {
+  width: 100%;
+}
+
+.layer {
+  background: transparent;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
+}
+
+.layer:hover {
+  background: rgba(0, 200, 150, 0.5);
+}
+
+.layer h3 {
+  width: 100%;
+  font-weight: 500;
+  color: #fff;
+  font-size: 26px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.layer:hover h3 {
+  bottom: 49%;
+  opacity: 1;
 }
