--- a/styles.css
+++ b/styles.css
@@ -307,9 +307,59 @@ h3 {
   color: #f44336;
 }
 
-/* @media (max-width: 700px) {
+@media (max-width: 700px) {
   .testimonial-col img {
     margin-left: 0px;
     margin-right: 15px;
   }
-} */
+}
+
+.cta {
+  margin: 100px auto;
+  width: 80%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("/img/banner2.jpg");
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  text-align: center;
+  padding: 100px 0;
+}
+
+.cta h1 {
+  color: #fff;
+  margin-bottom: 40px;
+  padding: 0;
+}
+
+@media (max-width: 700px) {
+  .cta h1 {
+    font-size: 24px;
+  }
+}
+
+.footer {
+  width: 100%;
+  text-align: center;
+  padding: 30px 0;
+  background-color: #e5e5e5;
+}
+.footer p {
+  font-size: 16px;
+}
+
+.footer h4 {
+  margin-bottom: 25px;
+  margin-top: 20px;
+  font-weight: 600;
+}
+
+.icons .fa {
+  color: #f44336;
+  margin: 0 13px;
+  cursor: pointer;
+  padding: 18px;
+}
+
+.fa-heart-o {
+}
