--- a/styles.css
+++ b/styles.css
@@ -360,3 +360,54 @@ h3 {
   cursor: pointer;
   padding: 18px;
 }
+
+/* ABOUT */
+.sub-header {
+  height: 50vh;
+  width: 100%;
+  background-image: url("./img/background.jpg");
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  color: #fff;
+}
+
+.sub-header h1 {
+  margin-top: 100px;
+}
+
+.about-us {
+  width: 100%;
+  margin: auto;
+  padding-top: 80px;
+  padding-bottom: 50px;
+}
+
+.about-col {
+  flex-basis: 40%;
+  padding: 10px 50px;
+  margin: 0 auto;
+}
+.about-col img {
+  width: 100%;
+}
+
+.about-col h1 {
+  margin: 0 auto;
+  padding-top: 0;
+}
+
+.about-col p {
+  padding: 30px 0 25px;
+  font-size: 18px;
+}
+
+.red-btn {
+  border: 1px solid #f44336;
+  background-color: transparent;
+  color: #f44336;
+}
+
+.red-btn:hover {
+  color: #fff;
+}
