--- a/styles.css
+++ b/styles.css
@@ -484,7 +484,65 @@ h3 {
   margin: 10px 0;
 }
 
-@media (max-width: 700px) {
+/* @media (max-width: 700px) {
   .sub-header h1 {
   }
+} */
+
+/* contact */
+.location {
+  position: relative;
+  width: 80%;
+  margin: auto;
+  padding: 80px 0;
+  display: block;
+}
+
+.footer-contact {
+  position: relative;
+  top: 1200px;
+  z-index: -5;
+}
+
+/* .contact {
+  background-color: gainsboro;
+  z-index: -5;
+} */
+.location iframe {
+  box-sizing: border-box;
+  width: 100%;
+  position: relative;
+  top: 200px;
+  padding: 20px;
+}
+
+.contact-us {
+  width: 80%;
+  position: absolute;
+  margin: auto;
+  display: flex;
+}
+.contact-col {
+  flex-basis: 48%;
+  position: relative;
+  margin: auto auto;
+  top: 180px;
+}
+.contact-col div {
+  display: flex;
+  align-items: center;
+}
+.contact-col input,
+.contact-col textarea {
+  box-sizing: border-box;
+  width: 60%;
+  font-size: 18px;
+  border-radius: 5px;
+  padding: 15px 25px;
+  margin: 10px 45px;
+  outline: none;
+  border: 1px solid #ccc;
+}
+
+@media (max-width: 600px) {
 }
